# framemine

./: .gitignore  README.md  config.example.yaml  pyproject.toml  setup.sh
framemine/: __init__.py  cli.py  dedup.py  download.py  enrichment.py  frames.py  output.py  saved.py  schema.py
framemine/ai/: __init__.py  base.py  gemini.py  openai_compat.py
framemine/schemas/: books.yaml  products.yaml  recipes.yaml
tests/: conftest.py  test_ai_gemini.py  test_ai_openai.py  test_cli.py  test_dedup.py  test_download.py  test_enrichment.py  test_frames.py  test_output.py  test_saved.py  test_schema.py
